--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,22 @@ services:
     networks:
       - swoole_network
 
+  db:
+    image: mysql:8.0
+    platform: linux/x86_64
+    restart: unless-stopped
+    environment:
+        MYSQL_DATABASE: ${DB_DATABASE:-phpswoole}
+        MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
+        MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
+        MYSQL_USER: ${DB_USERNAME:-username}
+    volumes:
+        - ./.docker/mysql/dbdata:/var/lib/mysql
+    ports:
+        - "3306:3306"
+    networks:
+      - swoole_network
+
 networks:
   swoole_network:
     driver: bridge
